# dbt-magics

./: LICENSE  README.md  bigqueryMagics.py  pyproject.toml
docs/: DUCKDB_INTEGRATION_SUMMARY.md  ENVIRONMENT_VARIABLES.md  SOURCE_SCHEMA_FIX.md
docs/examples/: duckdb_export_example.py  profiles_example.yml  sources_example.yml
src/dbt_magics/: ControllerApp.py  __init__.py  athenaMagics.py  bigqueryMagics.py  datacontroller.py  dbt_helper.py  duckdb_helper.py  magics.py  snowflakeMagics.py  sqliteMagics.py
